--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
   ],
   "version": "2.1.0",
   "versioninfo": "Fix some commands broken by 2.0 update.",
+  "playing": "I love avocado.",
   "channelReacts": {
     "711269048591056916": ":wave:",
     "705240176842113024": ":100:"
