--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
   "version": "2.1.0",
   "versioninfo": "Fix some commands broken by 2.0 update.",
   "playing": "I love avocado.",
-  "channelReacts": {
-    "704740519758266451": "::thumbsup:"
-  }
+  "channelReacts": [{
+    "channel":"704740519758266451",
+    "react": ":thumbsup:"
+  }]
 }
