--- a/config.json
+++ b/config.json
@@ -10,6 +10,6 @@
   "playing": "I love avocado.",
   "channelReacts": [{
     "channel":"704740519758266451",
-    "react": ":thumbsup:"
+    "react": "thumbsup"
   }]
 }
