Added welcome message

--- a/config.json
+++ b/config.json
@@ -15,5 +15,12 @@
   {
     "channel": "705240176842113024",
     "react": "💯"  
-  }]
+  }],
+  "channels": {
+    "tos": "693500714223272007",
+    "welcome": "693500714223272007"
+  },
+  "emotes": {
+    "acceptTOS": "📕"
+  }
 }
