--- a/config.json
+++ b/config.json
@@ -17,10 +17,10 @@
     "react": "💯"  
   }],
   "channels": {
-    "tos": "693500714223272007",
-    "welcome": "693500714223272007"
+    "tos": "713456684915359756",
+    "welcome": "704740519758266451"
   },
   "emotes": {
-    "acceptTOS": "📕"
+    "acceptTOS": "👍"
   }
 }
