--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
     "Fun",
     "Games"
   ],
-  "version": "2.1.5",
-  "versioninfo": "Saying \"Goodnight Bookery\" is no longer is deleted.",
+  "version": "2.1.6 BETA",
+  "versioninfo": "Send AFK disabled message in channel.",
   "playing": "I love avocado.",
   "channelReacts": [{
     "channel":"711269048591056916",
