Change log channel

--- a/config.json
+++ b/config.json
@@ -18,7 +18,8 @@
   }],
   "channels": {
     "tos": "713456684915359756",
-    "welcome": "704740519758266451"
+    "welcome": "704740519758266451",
+    "logs": "704745258335862864"
   },
   "emotes": {
     "acceptTOS": "👍"
