--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
   "modules": [
     "Utility",
     "Fun",
-    "Games"
+    "Games",
+    "Writing"
   ],
   "version": "2.2.0",
   "versioninfo": "Tons of new features, bug fixes, and more. Much cleaner and overall smoother experience.",
