--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   ],
   "version": "2.2.1",
   "versioninfo": "Tons of new features, bug fixes, and more. Much cleaner and overall smoother experience. Added `.prompt` command.",
-  "playing": "Benjamin blame the coal power plant instead of orange juice and UFOs.",
+  "playing": "Detroit: Become Human",
   "channelReacts": [{
     "channel":"711269048591056916",
     "react": "👋"
