--- a/config.json
+++ b/config.json
@@ -23,6 +23,7 @@
     "logs": "693512715016208445"
   },
   "emotes": {
-    "acceptTOS": "👍"
+    "acceptTOS": "👍",
+    "bookmark": "695723866990968972"
   }
 }
