--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
     "Games",
     "Writing"
   ],
-  "version": "2.2.1",
-  "versioninfo": "Tons of new features, bug fixes, and more. Much cleaner and overall smoother experience. Added `.prompt` command.",
+  "version": "2.2.2",
+  "versioninfo": "Added the bookmark feature! Use :red_bookmark: to bookmark any message.",
   "playing": "Detroit: Become Human",
   "channelReacts": [{
     "channel":"711269048591056916",
