--- a/config.json
+++ b/config.json
@@ -24,6 +24,7 @@
   },
   "emotes": {
     "acceptTOS": "📕",
-    "bookmark": "695723866990968972"
+    "bookmark": "695723866990968972",
+    "wave": "👋"
   }
 }
