--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mysql2": "^2.0.2",
     "rss-parser": "^3.7.2",
     "sequelize": "^5.21.3",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "unirest": "^0.6.0"
   }
 }
