--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,24 @@
-version: 2.1 # use CircleCI 2.1
-jobs: # a collection of steps
-  build: # runs not using Workflows must have a `build` job as entry point
-    working_directory: /app # directory where steps will run
-    docker: # run the steps with Docker
+version: 2.1
+
+orbs:
+  heroku: circleci/heroku@0.0.10. # Invoke the Heroku orb
+
+workflows:
+  heroku_deploy:
+    jobs:
+      - build
+      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
+          requires:
+            - build
+          filters:
+            branches:
+              only: sequential-branch-filter
+jobs:
+  build:
+    docker:
       - image: circleci/node:10.16.3 # ...with this image as the primary container; this is where all `steps` will run
       - image: mongo:4.2.0 # and this image as the secondary service container
+    working_directory: ~/finriq
     steps: # a collection of executable commands
       - checkout # special step to check out source code to working directory
       - run:
