--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,7 @@
 version: 2.1
-
 orbs:
-  heroku: circleci/heroku@0.0.10. # Invoke the Heroku orb
-
+  heroku: circleci/heroku@0.0.10
 workflows:
   heroku_deploy:
     jobs:
-      - build
-      - heroku/deploy-via-git: # Use the pre-configured job, deploy-via-git
-          requires:
-            - build
-          filters:
-            branches:
-              only: sequential-branch-filter
-jobs:
-  build:
-    docker:
-      - image: circleci/node:10.16.3 # ...with this image as the primary container; this is where all `steps` will run
-      - image: mongo:4.2.0 # and this image as the secondary service container
-    working_directory: ~/finriq
-    steps: # a collection of executable commands
-      - checkout # special step to check out source code to working directory
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache: # special step to restore the dependency cache
-          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: install-npm-wee
-          command: npm install
-      - save_cache: # special step to save the dependency cache
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - run: # run linter
-          name: lint
-          command: npm run pretest
-      - run: # run tests
-          name: test
-          command: npm test
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      - heroku/deploy-via-git
